# Whistl

./: .gitignore  CLAUDE.md  DEMO_SCRIPTS copy.md  DEMO_SCRIPTS.md  DEPLOY.md  README.md  build_whistl.sh  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: telegram-bots.yml
.superstack/: build-context.md
.turbo/runs/: 3G9RsZKpsngLXwu1WErtpgY33yT.json
agent/: package-lock.json  package.json
agent/src/: acedatacloud.ts  agent.ts  index.ts  solana.ts  txodds.ts
app/: brand.md  package.json
app/public/: sw.js
app/src/app/: globals.css  layout.tsx
app/supabase/: schema.sql  sweepstakes.sql
apps/pulse/: .env.example  README.md  launch.json  next.config.ts  package.json
apps/pulse/public/: sw.js  (+1 more)
apps/trader/: .env.example  README.md  next.config.ts  package.json  vercel.json
apps/whistl/: .env.example  README.md  package-lock.json  package.json  vercel.json
bots/: .env.example  DEPLOY.md  README.md  core.mjs  package.json  pulse.mjs  telegram-supabase.sql  trader.mjs  whistl.mjs
derisk/: .env.example  00-inspect-idl.mjs  01-auth.mjs  02-subscribe-activate.mjs  03-fetch-proof.mjs  04-validate-onchain.mjs  05-find-roots.mjs  README.md  activate.mjs  fund.mjs  package-lock.json  package.json  setup-p2.mjs  txline_idl.json
derisk/lib/: loadenv.mjs  txline.mjs
scripts/: deploy_whistl.sh  gen_key.sh
whistl/: Anchor.toml  Cargo.toml  deploy-local.sh  deploy.sh  package-lock.json  package.json
whistl/app/: package-lock.json
whistl/app/src/pages/: _app.tsx  index.tsx  matches.tsx
whistl/app/src/pages/pact/: new.tsx
whistl/app/src/styles/: globals.css
whistl/app/src/utils/: anchor.ts  whistl.json
whistl/programs/whistl/: Cargo.toml
whistl/programs/whistl/src/: lib.rs
whistl/tests/: whistl.ts
(+162 files in other folders)
