[workspace]
members = ["programs/whistl"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "thin"

# block-buffer 0.12.1 uses `edition = "2024"` in its Cargo.toml.
# Solana SBF Cargo 1.84.0 can't parse that field (edition2024 needs Cargo 1.85+).
# This local copy is identical source but declares edition = "2021", which 1.84.0 handles fine.
[patch.crates-io]
# All crates below use `edition = "2024"` in their published Cargo.toml.
# Solana SBF platform-tools bundle Cargo 1.84.0 which cannot parse that field
# (edition2024 was stabilised in Cargo 1.85.0). Local copies are source-identical;
# only the edition field is changed to "2021".
block-buffer       = { path = "vendor/block-buffer" }
cpufeatures        = { path = "vendor/cpufeatures" }
crypto-common      = { path = "vendor/crypto-common" }
digest             = { path = "vendor/digest" }
zeroize_derive     = { path = "vendor/zeroize_derive" }
zeroize            = { path = "vendor/zeroize" }
blake3             = { path = "vendor/blake3" }
constant_time_eq   = { path = "vendor/constant_time_eq" }
hybrid-array       = { path = "vendor/hybrid_array" }
ctutils            = { path = "vendor/ctutils" }
cmov               = { path = "vendor/cmov" }
toml_parser        = { path = "vendor/toml_parser" }
toml_datetime      = { path = "vendor/toml_datetime" }
toml_edit          = { path = "vendor/toml_edit" }
toml_writer        = { path = "vendor/toml_writer" }
serde_spanned      = { path = "vendor/serde_spanned" }
indexmap           = { path = "vendor/indexmap" }
hashbrown          = { path = "vendor/hashbrown" }
unicode-segmentation = { path = "vendor/unicode_segmentation" }
